--- a/IbraHabra.csproj
+++ b/IbraHabra.csproj
@@ -25,6 +25,9 @@
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
         <PackageReference Include="OpenIddict" Version="7.1.0" />
         <PackageReference Include="OpenIddict.EntityFrameworkCore" Version="7.1.0" />
+        <PackageReference Include="OpenIddict.Server.AspNetCore" Version="7.1.0" />
+        <PackageReference Include="OpenIddict.Validation.AspNetCore" Version="7.1.0" />
+        <PackageReference Include="Scalar.AspNetCore" Version="2.8.6" />
         <PackageReference Include="WolverineFx" Version="4.12.0" />
     </ItemGroup>
 
