--- a/IbraHabra.csproj
+++ b/IbraHabra.csproj
@@ -29,6 +29,7 @@
         <PackageReference Include="OpenIddict.Server.AspNetCore" Version="7.1.0" />
         <PackageReference Include="OpenIddict.Validation.AspNetCore" Version="7.1.0" />
         <PackageReference Include="Scalar.AspNetCore" Version="2.8.6" />
+        <PackageReference Include="System.Linq.Async" Version="6.0.3" />
         <PackageReference Include="WolverineFx" Version="4.12.0" />
     </ItemGroup>
 
