--- a/IbraHabra.csproj
+++ b/IbraHabra.csproj
@@ -11,6 +11,7 @@
     <ItemGroup>
         <PackageReference Include="dotenv.net" Version="4.0.0" />
         <PackageReference Include="FluentValidation" Version="12.0.0" />
+        <PackageReference Include="Mapster" Version="7.4.0" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.9" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.9" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.7" />
@@ -34,6 +35,8 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="Application\UseCases\Admin\" />
+      <Folder Include="Domain\SharedKernel\" />
       <Folder Include="Infra\Migrations\" />
     </ItemGroup>
 
