Added 2Fa Handlers and service for supporting it
Partially Created 2Fa Handler for setup, and verify. Added
TwoFactorTokenService and CurrentUserService for getting the 2fa status.

--- a/IbraHabra.csproj
+++ b/IbraHabra.csproj
@@ -36,6 +36,7 @@
 
     <ItemGroup>
       <Folder Include="Application\UseCases\Admin\" />
+      <Folder Include="Application\UseCases\Users\Queries\" />
       <Folder Include="Domain\SharedKernel\" />
       <Folder Include="Infra\Migrations\" />
     </ItemGroup>
