--- a/IbraHabra.csproj
+++ b/IbraHabra.csproj
@@ -31,14 +31,15 @@
         <PackageReference Include="OpenIddict.Validation.AspNetCore" Version="7.1.0" />
         <PackageReference Include="Scalar.AspNetCore" Version="2.8.6" />
         <PackageReference Include="System.Linq.Async" Version="6.0.3" />
-        <PackageReference Include="WolverineFx" Version="4.12.0" />
+        <PackageReference Include="WolverineFx" Version="4.12.2" />
+        <PackageReference Include="WolverineFx.EntityFrameworkCore" Version="4.12.2" />
+        <PackageReference Include="WolverineFx.RDBMS" Version="4.12.2" />
     </ItemGroup>
 
     <ItemGroup>
       <Folder Include="Application\UseCases\Admin\" />
       <Folder Include="Application\UseCases\Users\Queries\" />
       <Folder Include="Domain\SharedKernel\" />
-      <Folder Include="Infra\Migrations\" />
     </ItemGroup>
 
 </Project>
