--- a/IbraHabra.csproj
+++ b/IbraHabra.csproj
@@ -35,6 +35,7 @@
         <PackageReference Include="OpenIddict.Validation.AspNetCore" Version="7.1.0" />
         <PackageReference Include="Scalar.AspNetCore" Version="2.8.6" />
         <PackageReference Include="System.Linq.Async" Version="6.0.3" />
+        <PackageReference Include="UAParser" Version="3.1.47" />
         <PackageReference Include="WolverineFx" Version="4.12.2" />
     </ItemGroup>
 
