--- a/IbraHabra.csproj
+++ b/IbraHabra.csproj
@@ -9,7 +9,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-       
+        <PackageReference Include="Asp.Versioning.Mvc" Version="8.1.0" />
+        <PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" Version="8.1.0" />
+
         <PackageReference Include="dotenv.net" Version="4.0.0" />
         <PackageReference Include="FluentValidation" Version="12.0.0" />
         <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
