added create user handler and endpoint for creating user to manage the IAM & init UI with tanstack start

--- a/IbraHabra.csproj
+++ b/IbraHabra.csproj
@@ -47,6 +47,7 @@
       <Folder Include="Application\UseCases\Admin\" />
       <Folder Include="Application\UseCases\Project\Commands\" />
       <Folder Include="Application\UseCases\Users\Queries\" />
+      <Folder Include="Ui\" />
     </ItemGroup>
 
 </Project>
