added cache service which can either be in memory or distribute

--- a/.env.example
+++ b/.env.example
@@ -31,6 +31,9 @@ OPENIDDICT__SIGNINGCERT__PASSWORD=cert_password
 OPENIDDICT__ENCRYPTIONCERT__PATH=/path/to/encryption-cert.pfx
 OPENIDDICT__ENCRYPTIONCERT__PASSWORD=cert_password
 
+# Redis 
+REDIS__REDISCONNECTIONSTRING="localhost:6379"
+
 ## Email Service (if using)
 #Email__SmtpServer=smtp.gmail.com
 #Email__SmtpPort=587
