--- a/Ui/package.json
+++ b/Ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": ".",
+  "name": "ibrahabra",
   "private": true,
   "type": "module",
   "scripts": {
@@ -12,6 +12,9 @@
     "check": "prettier --write . && eslint --fix"
   },
   "dependencies": {
+    "@heroui/button": "^2.2.27",
+    "@heroui/system": "^2.4.23",
+    "@heroui/theme": "^2.4.23",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-devtools": "^0.7.0",
     "@tanstack/react-query": "^5.66.5",
@@ -22,13 +25,14 @@
     "@tanstack/react-start": "^1.132.0",
     "@tanstack/react-store": "^0.7.0",
     "@tanstack/router-plugin": "^1.132.0",
-    "@tanstack/store": "^0.7.0",
+    "@tanstack/store": "^0.8.0",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.544.0",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.6",
     "tw-animate-css": "^1.3.6",
