change handler signature for admin Auth and AdminRole controllers

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,16 @@ riderModule.iml
 
 
 .env
+
+node_modules
+.DS_Store
+dist
+dist-ssr
+*.local
+count.txt
+.nitro
+.tanstack
+.wrangler
+.output
+.vinxi
+todos.json
