--- a/Ui/package.json
+++ b/Ui/package.json
@@ -12,11 +12,13 @@
     "check": "prettier --write . && eslint --fix"
   },
   "dependencies": {
-    "@heroui/button": "^2.2.27",
-    "@heroui/system": "^2.4.23",
-    "@heroui/theme": "^2.4.23",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.0.6",
+    "@tanstack/form-core": "^1.24.4",
     "@tanstack/react-devtools": "^0.7.0",
+    "@tanstack/react-form": "^1.23.8",
     "@tanstack/react-query": "^5.66.5",
     "@tanstack/react-query-devtools": "^5.84.2",
     "@tanstack/react-router": "^1.132.0",
@@ -29,14 +31,14 @@
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.23.24",
     "lucide-react": "^0.544.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.6",
     "tw-animate-css": "^1.3.6",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-tsconfig-paths": "^5.1.4",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@tanstack/devtools-event-client": "^0.3.2",
